# ee6470-final

./: README.rst
application/: CMakeLists.txt
application/cmake/: Toolchain-archc-riscv.cmake
application/src/: CMakeLists.txt
application/src/bfs/: CMakeLists.txt  main.cpp
application/src/emboss_sw/: CMakeLists.txt  main.cpp
application/src/heated_plate/: CMakeLists.txt  Makefile  grid_to_bmp.cpp  heated_plate.c
application/src/hello/: CMakeLists.txt  main.cpp
application/src/libac_sysc/: CMakeLists.txt  README  ac_arm.h  ac_real_sysc.c  ac_specs  ac_syscall.def  ac_syscall_codes.h  ac_syscall_wrapper.c  ac_syscall_wrapper.h  alarm.c  chmod.c  gettod.c  kill.c  stat.c
application/src/mem_test_03_shared/: CMakeLists.txt  mem_test_03_shared.c
application/src/parallelbfs/: CMakeLists.txt  main.cpp  maze_generator.py  mazemap.txt
application/src/pi_mp/: CMakeLists.txt  pi_mp.c
application/src/plat_app/: CMakeLists.txt  main.cpp
application/src/pooling_hw_test/: CMakeLists.txt  main.cpp
application/src/pooling_sw_test/: CMakeLists.txt  main.cpp
application/src/rv_hal/: c_crt.S  cxx_crt.S  get_id.S  get_id.h  test.ld
application/src/systemc_io_lib/: CMakeLists.txt
application/src/utility/: CMakeLists.txt  acPthread.c  acPthread.h
platform/: CMakeLists.txt
platform/src/: CMakeLists.txt
platform/src/common/: CMakeLists.txt  HardwareDataType.cpp  HardwareDataType.h  config.h  utility_class.cpp  utility_class.h
platform/src/cpu_core/: CMakeLists.txt  cpu_core.cpp  cpu_core.h  scml_bridge.cpp  scml_bridge.h  simple_address_map.h  simple_bus.h  tlm_memory.cpp  tlm_memory.h
platform/src/cpu_core/riscv_rv32g/: defines_gdb  riscv.H  riscv.ac  riscv.cpp  riscv_arch.H  riscv_arch.cpp  riscv_arch_ref.H  riscv_arch_ref.cpp  riscv_bhv_macros.H  riscv_ih_bhv_macros.H  riscv_intr_handlers.H  riscv_intr_handlers.cpp  riscv_isa.H  riscv_isa.ac  riscv_isa.cpp  riscv_isa_helper.H  riscv_isa_init.cpp  riscv_parms.H  riscv_syscall.H  riscv_syscall.cpp
platform/src/ctrler_api/: CMakeLists.txt  bus_access_if.cpp  bus_access_if.h  ctrler_api.cpp  ctrler_api.h
platform/src/dma/: CMakeLists.txt  dma.cpp  dma.h
platform/src/lock_engine/: CMakeLists.txt  lock.cpp  lock.h  tlm_lock.cpp  tlm_lock.h
platform/src/memory/: CMakeLists.txt  memory_model.cpp  memory_model.h
platform/src/pool_engine/: CMakeLists.txt  pool_engine.cpp  pool_engine.h
platform/src/reg_set/: CMakeLists.txt  reg_set.cpp  reg_set.h  test.cpp
platform/src/system/: AccPlatform.cpp  AccPlatform.h  CMakeLists.txt  ISASimPlatform.cpp  ISASimPlatform.h  ISASimTest.cpp
